--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="image-box">
-        <img class="image" src="/images used/profile-pic.png">
+        <img class="image" src="/images-used/profile-pic.png">
       </div>
     </div>
     <div>
@@ -102,21 +102,21 @@
         <div class="tiles">
           <div class="column1">
             <div class="tile1">
-              <img src="images used/aws.svg" class="image1">
+              <img src="images-used/aws.svg" class="image1">
               <div class="tile-text-1">AWS</div>
             </div>
             <div class="tile2">
-              <img src="images used/mongodb-svgrepo-com.svg" class="image3">
+              <img src="images-used/mongodb-svgrepo-com.svg" class="image3">
               <div class="tile-text-2">MongoDB</div>
             </div>
           </div>
           <div class="column2">
             <div class="tile2">
-              <img src="images used/express-js-icon.svg" class="image2">
+              <img src="images-used/express-js-icon.svg" class="image2">
               <div class="tile-text-2">Express.js</div>
             </div>
             <div class="tile1">
-              <img src="images used/mysql.svg" class="image4">
+              <img src="images-used/mysql.svg" class="image4">
               <div class="tile-text-1">MySQL</div>
             </div></div>
         </div>
@@ -128,7 +128,7 @@
         <div class="row1">
           <div class="work1">
             <div class="image-container">
-              <img class="thumb" src="images used/work1.png">
+              <img class="thumb" src="images-used/work1.png">
               <div class="hover-text">
                 LearnGo offers a powerful Learning Management System (LMS) designed to help individuals and organizations access engaging and effective online courses. Unlock your learning potential with our cutting-edge platform.
                 <div class="preview">
@@ -144,7 +144,7 @@
           </div>
           <div class="work2">
             <div class="image-container">
-              <img class="thumb" src="images used/work2.png">
+              <img class="thumb" src="images-used/work2.png">
               <div class="hover-text">
                 Discover our expertise in web & app development, UI/UX design. Transform your digital ideas into reality with our creative team.
                 <div class="preview">
@@ -160,7 +160,7 @@
           </div>
           <div class="work3">
             <div class="image-container">
-              <img class="thumb" src="images used/work3.png">
+              <img class="thumb" src="images-used/work3.png">
               <div class="hover-text">
                 Chuckle Chums is an e-commerce platform for kids, implemented with Next.js, TypeScript, Tailwind CSS, and React Query, offering a seamless user experience. It was a freelance project for a client.
                 <div class="preview">
@@ -178,7 +178,7 @@
         <div class="row2">
           <div class="work4">
             <div class="image-container">
-              <img class="thumb" src="images used/work4.png">
+              <img class="thumb" src="images-used/work4.png">
               <div class="hover-text">
                 Palette is an e-commerce platform for customizing clothing designs, implemented with ReactJS, FabricJS, Redux Toolkit, and React Query, offering a seamless user experience. It was a freelance project for a client.
                 <div class="preview">
@@ -194,7 +194,7 @@
           </div>
           <div class="work5">
             <div class="image-container">
-              <img class="thumb" src="images used/work5.png">
+              <img class="thumb" src="images-used/work5.png">
               <div class="hover-text">
                 Developed a dynamic Full Stack solution for Indohype website, featuring sleek User and Admin panels, and robust backend APIs. Excited to deliver top-notch functionality for the client's digital journey.
                 <div class="preview">
@@ -210,7 +210,7 @@
           </div>
           <div class="work6">
             <div class="image-container">
-              <img class="thumb" src="images used/work6.png">
+              <img class="thumb" src="images-used/work6.png">
               <div class="hover-text">
                 Created a responsive hotel website for Hotel Kusum Palace, showcasing Nepal's beauty. The website allows users to explore local attractions and book rooms with ease.
                 <div class="preview">
@@ -290,7 +290,7 @@
             <div style="font-size: 20px;">Beautiful design for your website</div>
           </div>
             <button class="you-need-button">
-              <img class="you-need-img" src="images used/arrow-right.svg">
+              <img class="you-need-img" src="images-used/arrow-right.svg">
             </button>
         </div>
         <div class="contact-details">
@@ -298,7 +298,7 @@
           <input class="search1" type="text" placeholder="e.g. John Doe">
           <input class="search2" type="text" placeholder="Write your message">
           <button class="send-button">
-            <img class="send-img" src="images used/paper-plane.svg">
+            <img class="send-img" src="images-used/paper-plane.svg">
             <div class="send-text">Send</div>
           </button>
         </div>
